Enable XML documentation file output

--- a/LogWrap/LogWrap.Core/LogWrap.Core.csproj
+++ b/LogWrap/LogWrap.Core/LogWrap.Core.csproj
@@ -10,4 +10,8 @@
     <PackageTags>logging logging-abstraction logging-framework</PackageTags>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\LogWrap.Core.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
