--- a/LogWrap/LogWrap.Core/LogWrap.Core.csproj
+++ b/LogWrap/LogWrap.Core/LogWrap.Core.csproj
@@ -8,10 +8,18 @@
     <Product>LogWrap.Core</Product>
     <Description>Provides a simple abstraction over logging frameworks, which allows the logging framework to be swapped without requiring changes of application code.</Description>
     <PackageTags>logging logging-abstraction logging-framework</PackageTags>
+    <PackageProjectUrl>https://github.com/lloydjatkinson/log-wrap</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/lloydjatkinson/log-wrap</RepositoryUrl>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard2.0\LogWrap.Core.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\LogWrap.Core.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
