--- a/LogWrap/LogWrap.NLog/LogWrap.NLog.csproj
+++ b/LogWrap/LogWrap.NLog/LogWrap.NLog.csproj
@@ -7,10 +7,18 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>logging logging-abstraction logging-framework</PackageTags>
     <Description>Provides a simple abstraction over logging frameworks, which allows the logging framework to be swapped without requiring changes of application code. This package is for use with NLog.</Description>
+    <PackageProjectUrl>https://github.com/lloydjatkinson/log-wrap</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/lloydjatkinson/log-wrap</RepositoryUrl>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard2.0\LogWrap.NLog.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\LogWrap.NLog.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
